Refactor Spring MVC: import, Role Enum